[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/crates/ModelCrate.gd" type="Script" id=1]
[ext_resource path="res://scripts/crates/Crate.gd" type="Script" id=2]
[ext_resource path="res://textures/crate/common/boxes-aku.png" type="Texture" id=3]
[ext_resource path="res://Sounds/crate/crate_break.wav" type="AudioStream" id=4]
[ext_resource path="res://models/crate/m_crate_static.obj" type="ArrayMesh" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.316761, 0.324904, 0.312068 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.292798, 0.338102, 0.296167 )

[sub_resource type="ParticlesMaterial" id=3]
spread = 180.0
flatness = 0.81
gravity = Vector3( 0, -100, 0 )
initial_velocity = 19.98
angular_velocity = 153.44
scale = 0.39

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 1, 0.585938, 0, 0.807843 )
albedo_texture = ExtResource( 3 )
metallic_specular = 0.0
emission_enabled = true
emission = Color( 0.917969, 0.723909, 0.54863, 1 )
emission_energy = 0.06
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="QuadMesh" id=5]
material = SubResource( 4 )

[node name="base_crate" type="StaticBody" groups=[
"C_CRATE",
]]
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )
_name = "Question"
destroyable = false
is_animated = true

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.355758, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 17

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.351501, 0 )
shape = SubResource( 2 )

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.474792, 0 )
emitting = false
amount = 15
lifetime = 0.24
one_shot = true
speed_scale = 0.45
explosiveness = 1.0
visibility_aabb = AABB( -1.11534, -1.25481, -0.856409, 2.23069, 2.50963, 1.71282 )
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )

[node name="Sfx" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )

[node name="Model" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Model"]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0 )
mesh = ExtResource( 5 )
material/0 = null
material/1 = null
[connection signal="area_entered" from="Area" to="." method="_on_Area_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_body_exited"]
